# TyxonQ

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MIGRATION_PLAN.md  QCOS_CHANGES.md  README.md  README_cn.md  README_jp.md  REFACTORING_WORKLOG.md  TECHNICAL_ARCHITECTURE_REPORT.md  TYXONQ_TECHNICAL_WHITEPAPER.md  main.py  pyproject.toml  wuyue_open-0.5-py3-none-any.whl  wuyue_plugin-1.0-py3-none-any.whl
docs/: Makefile  README.md  build_docs.sh  make.bat  pulse_support_cn.md  pulse_support_en.md  pulse_support_jp.md  qcos_provider.md  quafu_provider.md  requirements-doc.txt  requirements-rtd.txt  tyxonq_cloud_api.md  tyxonq_cloud_api_cn.md  tyxonq_cloud_api_en.md  tyxonq_cloud_api_jp.md
examples-ng/: ace_test_for_first_attemp.py  aces_for_setting_numeric_backend.py  aces_test_for_numeric_backend.py  analog_evolution_interface.py  batched_parameters_structures.py  chaotic_behavior.py  checkpoint_memsave.py  circuit_chain_demo.py  clifford_optimization.py  cotengra_setting_bench.py  hchainhamiltonian.py  hea_scan_jit_acc.py  jacobian_cal.py  jsonio.py  lightcone_simplify.py  matprod_vmap.py  mcnoise_boost.py  mcnoise_boost_v2.py  mcnoise_check.py  mera_extra_mpo.py  mipt.py  mpsvsexact.py  noise_calibration.py  noise_controls_demo.py  noisy_qml.py  optperformance_comparison.py  parameter_shift.py  pytorch_scan_jit_acc.py  quditcircuit.py  readout_mitigation.py  sample_value_gradient.py  simple_demo_1.py  stabilizer_simulation.py  training_deep_tunable_structures.py  universal_lr.py  variational_dynamics_circuit.py  variational_dynamics_generalized.py  vmap_randomness.py  (+7 more)
(+1252 files in other folders)
